# CableTrack

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: generate_csv.py
docs/: Описание_подхода.md
src/apps/audit/: admin.py  models.py
src/apps/audit/migrations/: 0001_initial.py  0002_remove_importlog_uq_importlog_batch_sha256.py
src/apps/catalog/: admin.py  models.py
src/apps/catalog/migrations/: 0001_initial.py
src/apps/core/: models.py
src/apps/core/management/commands/: basic_data.py
src/apps/inventory/: admin.py  forms.py  models.py  views.py
src/apps/inventory/migrations/: 0001_initial.py
src/apps/inventory/services/: import_from_csv.py
src/apps/storage/: admin.py  models.py
src/apps/storage/migrations/: 0001_initial.py
src/config/: settings.py  urls.py
src/templates/admin/inventory/batch/: import.html
