[tool.poetry]
name = "cabletrack"
version = "0.1.0"
description = ""
authors = ["Vlad <foile.dm@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
django = "^5.2.7"
djangorestframework = "^3.16.1"
drf-spectacular = "^0.28.0"
django-environ = "^0.12.0"
psycopg = {extras = ["binary"], version = "^3.2.11"}
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
